[package]
name = "evertils-log-helper"
version = "0.2.0"
authors = ["Ryan Priebe <rpriebe@me.com>"]
description = "Wraps evertils logging commands in a rust package"
license = "WTFPL"

[dependencies]
chrono = "0.4"

[[bin]]
name = "log"
path = "src/log.rs"

[[bin]]
name = "logt"
path = "src/logt.rs"

[[bin]]
name = "newday"
path = "src/newday.rs"